--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "express-session": "^1.17.3",
     "joi": "^17.6.3",
     "method-override": "^3.0.0",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2"
   }
 }
